force-app/main/default/objects/Risk__c/Risk__c.object-meta.xml
<CustomObject>
    <label>Risk Assessment</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Risk Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Risks Assessments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>