force-app/main/default/objects/Risk__c/fields/Is_Delayed__c.field-meta.xml
<CustomField>
    <fullName>Is_Delayed__c</fullName>
    <label>Is Delayed?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1-2 weeks</fullName>
            </value>
            <value>
                <fullName>3-4 weeks</fullName>
            </value>
            <value>
                <fullName>&gt; 4 weeks</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>