force-app/main/default/objects/Risk__c/fields/Mitigation_Actions__c.field-meta.xml
<CustomField>
    <fullName>Mitigation_Actions__c</fullName>
    <label>Mitigation Actions</label>
    <type>TextArea</type>
</CustomField>