force-app/main/default/objects/Risk__c/fields/TaskRay_Project__c.field-meta.xml
<CustomField>
    <fullName>TaskRay_Project__c</fullName>
    <label>TaskRay Project</label>
    <referenceTo>TASKRAY__Project__c</referenceTo>
    <relationshipLabel>Risks Assessments</relationshipLabel>
    <relationshipName>Risks_Assessments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>